更新commons-logging和logback-classic依赖至最新版本